Se añade mas funcionalidades

--- a/abastecer_manual.html
+++ b/abastecer_manual.html
@@ -72,6 +72,7 @@
                         <a class="collapse-item" href="categorias.html">Categorias</a>
                         <a class="collapse-item" href="marcas.html">Marcas</a>
                         <a class="collapse-item" href="gastos.html">Gastos</a>
+                        <a class="collapse-item" href="almacenes.html">Almacenes</a>
                     </div>
                 </div>
             </li>
