--- a/saldos.html
+++ b/saldos.html
@@ -78,6 +78,7 @@
                         <a class="collapse-item" href="marcas.html">Marcas</a>
                         <a class="collapse-item active" href="saldos.html">Saldos</a>
                         <a class="collapse-item" href="gastos.html">Gastos</a>
+                        <a class="collapse-item" href="almacenes.html">Almacenes</a>
                     </div>
                 </div>
             </li>
