--- a/venta_.html
+++ b/venta_.html
@@ -84,6 +84,7 @@
                         <a class="collapse-item" href="marcas.html">Marcas</a>
                         <a class="collapse-item" href="saldos.html">Saldos</a>
                         <a class="collapse-item" href="gastos.html">Gastos</a>
+                        <a class="collapse-item" href="almacenes.html">Almacenes</a>
                     </div>
                 </div>
             </li>
